--- a/examples/basic.html
+++ b/examples/basic.html
@@ -32,7 +32,7 @@ src="https://pagead2.googlesyndication.com/pagead/show_ads.js">
 <script type="text/javascript">
     $.notify({title :'Notification Title', content:'Auto dismiss after 3 seconds', timeout:3000});
     $.notify({title :'jQueryScript.Net', content:'A jQuery Plugin Website', timeout:0});
-    $.notify({title :'jQueryScript.Net', content:'A jQuery Plugin Website', timeout:0});
+    $.notify({title :'W A R N I NG !', content:'Make Sure You'r System Volume are too Low or  Plug headphone', timeout:3000});
 </script>
 <script type="text/javascript">
 
